Обновил уровни доступа. (удалил старые связи, но пока не внедрил).

--- a/public/app/pages/users/modal/editUser.html
+++ b/public/app/pages/users/modal/editUser.html
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="roleId" class="col-md-4 control-label">Уровень прав</label>
+                        <label for="roleId" class="col-md-4 control-label">Уровень доступа</label>
                         <div class="col-md-8"
                              ng-init="editable.roleId = {key: editable.roleId, value: roles[editable.roleId]}">
                             <ui-select ng-model="editable.roleId" ng-if="currentUserId != editable.id">
